--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,8 @@
-# environment variables
 .env
-learn*.*
-*_backup.py
-*.pdf
 *.DS_Store
 *.lock
 
 /simulated_inbox
 /simulated_outbox
+/data_booking
 /__pycache__
